--- a/_posts/2022-09-15-SQL-2.md
+++ b/_posts/2022-09-15-SQL-2.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "데이터 정의 언어(Data Definition Language, DDL"
+title:  "[SQL-2] 데이터 정의 언어(Data Definition Language, DDL"
 ---
 ### SQL 분류
 
